[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "stol"
version = "0.0.1"
authors = [
  {name="Lukas Huth"},
]
description = "STOL - Sperical Tensor Operator Library: A library that is capable to simplify expressions using spherical tensor operators"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC-BY-SA 4.0",
    "operating system :: OS Independent",
]
dependencies = [
    "sympy>=1.7",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/LukasLikesPython/spherical_tensor_operator_library"
"Bug Tracker" = "https://github.com/LukasLikesPython/spherical_tensor_operator_library/issues"