[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "stolpy"
version = "0.0.1"
authors = [
  {name="Lukas Huth"},
]
description = "stolpy - Sperical Tensor Operator Library for PYthon: A library that is capable to simplify expressions using spherical tensor operators"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GPLv3",
    "operating system :: OS Independent",
]
dependencies = [
    "sympy>=1.7",
]

[project.urls]
"Homepage" = "https://github.com/LukasLikesPython/spherical_tensor_operator_library"
"Bug Tracker" = "https://github.com/LukasLikesPython/spherical_tensor_operator_library/issues"