[metadata]

name = spherical_tensor_operator_library
version = 1.0.0
author = Lukas Huth
author_email =
description = A python package that can be used to simplify equations using spherical tensor operators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alod83/package_template
project_urls =
Bug Tracker = https://github.com/alod83/package_template/issuesclassifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent[options]
package_dir =
= srcpackages = find:
python_requires = >=3.6
install_requires =
   numpy