[metadata]

name = spherical_tensor_operator_library
version = 1.0.0
author = Lukas Huth
author_email =
description = A python package that can be used to simplify equations using spherical tensor operators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LukasLikesPython/spherical_tensor_operator_library
project_urls =
Bug Tracker = https://github.com/LukasLikesPython/spherical_tensor_operator_library/issues

classifiers =
Programming Language :: Python :: 3
License :: CC-BY-SA 4.0"
Operating System :: OS Independent[options]

[options]
package_dir =
= src

packages = find:
python_requires = >=3.10
install_requires =
   sympy,
   pytest